# ArcadeEpitech

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt  Errors.cpp  Exception.cpp  IGame.cpp  Utils.cpp  core.cpp  iDisplayModule.cpp  main.cpp  player.cpp
game_libs/snake/: CMakeLists.txt  player.cpp  snakeGame.cpp
graphic_libs/ncurses/: CMakeLists.txt  libncurses.cpp
graphic_libs/sdl/: CMakeLists.txt  sdl.cpp
graphic_libs/sfml/: CMakeLists.txt  sfml.cpp
include/: Errors.hpp  Exception.hpp  IGame.hpp  core.h  iDisplayModule.hpp  inputs.h  player.hpp  snakeGame.hpp
include/libs/: libncurses.h  sdl.h  sfml.h
ncurses/: CMakeLists.txt  libncurses.cpp
sdl/: CMakeLists.txt  sdl.cpp
sfml/: CMakeLists.txt  sfml.cpp
snake/: CMakeLists.txt  player.cpp  snakeGame.cpp
